--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 
                 if (online) {
                     statusElement.className = 'firebase-status firebase-online';
-                    statusText.textContent = `🟢 ${message}`;
+                    statusText.textContent = `🟢 
                 } else {
                     statusElement.className = 'firebase-status firebase-offline';
                     statusText.textContent = `🟡 ${message}`;
@@ -2093,3 +2093,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97242b6c65ae1d32',t:'MTc1NTcxNjgwNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
